--- a/breakingbad/src/css/style.css
+++ b/breakingbad/src/css/style.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base{
+    @font-face {
+        font-family:'font-bb' ;
+        src: url('/fonts/Heart Breaking Bad.otf') format('opentype');
+    }
+    .font-header{
+       font-family:'font-bb';
+    }
+}
